added timer image and started javascript

--- a/index.html
+++ b/index.html
@@ -11,7 +11,24 @@
     <div class="start-screen">
         <button id="start-button">Start</button>
     </div>
-    <div class="display-container"></div>
+    <div id="display-container">
+        <div class="header">
+            <div class="number-of-count">
+                <span class="number-of-question">1 of 3</span>
+            </div>
+            <div class="timer-div">
+                <img src="120px-Simple_icon_time.svg.png"/>
+                <span class="time-left">10s</span>
+
+            </div>
+
+        </div>
+
+        <div id="container">
+            
+        </div>
+        <button id="next-button">Next</button>
+    </div>
     <div class="score-container hide"></div>
         <div id="user-score"></div>
         <button id="restart">Restart</button>
